<resources>
    <string name="app_name">Ways to spend your time</string>
    <string name="call">Call your friend</string>
    <string name="friend_def">A person who is willing to take you the way you are</string>
    <string name="read">Read</string>
    <string name="reading_def">You\'re never alone when you\'re reading a book</string>
    <string name="next">Next</string>
    <string name="museum">Visit museum</string>
    <string name="museum_def">The place where Time is transformed into Space</string>
    <string name="music">Music</string>
    <string name="music_def">When words leave off, \nMusic begins</string>
    <string name="learn">Learn</string>
    <string name="learn_def">Live as if you were to die tommorow.\nLearn as if you wew ro live forever</string>
</resources>
