<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    tools:context="com.lukomskyi.roman.waystospendyourtime.MusicActivity">

    <ImageView
        style="@style/ImageProps"
        android:src="@drawable/homer_music"/>
    <TextView
        style="@style/TextProps"
        android:text="@string/music"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_def"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <ImageButton
            android:id="@+id/btn_open_player"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_library_music_white_48dp"/>
        <Button
            android:id="@+id/btn_music_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>
